@@ -1,3 +1,5 @@
+0.X     2007-XX-XX      Look for headers as well as libraries;
+
 0.3     2007-10-30      tests now skip when they need a compiler and can't
                           find one;
                         Borland compiler support;
